--- a/index.html
+++ b/index.html
@@ -17,3 +17,7 @@
 </body>
 
 </html>
+<div class="conteudo-senha">
+    <label for="senha">Senha</label>
+    <input name="senha" type="text" id="campo-senha">
+</div>
