--- a/index.html
+++ b/index.html
@@ -20,3 +20,14 @@
         </div>
     </section>
 
+    <div class="parametro-coluna__senha">
+        <div class="parametro-senha">
+            <h4 class="parametro-senha__titulo">Número de caracteres</h4>
+        </div>           	 
+        <div class="parametro-senha">
+            <h4 class="parametro-senha__titulo">Características da senha</h4>
+        </div>
+        <div class="parametro-senha">
+            <h4 class="parametro-senha__titulo">Força da senha</h4>
+        </div>
+    </div>
