--- a/index.html
+++ b/index.html
@@ -61,4 +61,10 @@
         <p class="parametro-senha__texto">12</p>
         <button class="parametro-senha__botao">+</button>
     </div>
-</div>  
+</div>               
+
+<!-- Código omitido -->
+            
+</div>
+</section>
+</body>
