--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="conteudo-senha">
             <label for="senha">Senha</label>
-            <input name="senha" type="text" id="campo-senha" />
+            <input name="senha" type="text" id="campo-senha" readonly>
         </div>
         <div class="parametro">
             <h3 class="parametro-titulo">Personalize sua senha</h3>
@@ -58,46 +58,11 @@
                         <p>Média</p>
                         <p>Forte</p>
                     </div>
+               <p class="entropia"></p>
                 </div>
             </div>
-            <div class="parametro-senha">
-                <<<<<<< HEAD <h4 class="parametro-senha__titulo">Número de caracteres</h4>
-                    <div class="parametro-senha-botoes">
-                        <button class="parametro-senha__botao">-</button>
-                        <p class="parametro-senha__texto">12</p>
-                        <button class="parametro-senha__botao">+</button>
-                    </div>
-                    =======
-                    <h4 class="parametro-senha__titulo">Força da senha</h4>
-                    <div class="barra"></div>
-                    <div class="forca fraca"></div>
-                    <div class="parametro-senha-textos">
-                        <p>Fraca</p>
-                        <p>Média</p>
-                        <p>Forte</p>
-                    </div>
-                    >>>>>>> c2751d5fe0eaac34e6a24aac47dcdb3e10de4317
-            </div>
-            <<<<<<< HEAD=======</div>
-                <div class="parametro-senha">
-                    <h4 class="parametro-senha__titulo">Número de caracteres</h4>
-                    <div class="parametro-senha-botoes">
-                        <button class="parametro-senha__botao">-</button>
-                        <p class="parametro-senha__texto">12</p>
-                        <button class="parametro-senha__botao">+</button>
-                    </div>
-                </div>
-                >>>>>>> c2751d5fe0eaac34e6a24aac47dcdb3e10de4317
-
-                <<<<<<< HEAD <!-- Código omitido -->
-
         </div>
     </section>
-</body>
-=======
-<!-- Código omitido -->
-
-</div>
-</section>
-</body>
->>>>>>> c2751d5fe0eaac34e6a24aac47dcdb3e10de4317
+    <script src="main.js"></script>
+</body> 
+</html>
